--- a/static/description/index.html
+++ b/static/description/index.html
@@ -1,8 +1,46 @@
+<section class="oe_container lead mt64">
+	<div>
+		<div class="col-md-12 mt16" style="padding:0;">
+			<div class="col-md-12" style="padding:0;">
+				<div class="panel-group mb0 mt0" role="tablist" id="priceAccordeon" style="padding:0;">
+					<div class="panel-heading mb0 mt0 collapsed" role="tab" data-toggle="collapse" data-parent="#priceAccordeon" data-target="#priceAccordeon_area" aria-expanded="false" style="margin-left:0;padding:0 0 2px 0;text-align:right;">
+						<strong>
+							<div style="background-color:#875A7B;color:white;padding:5px;margin-bottom:3px;text-align:center;border-radius:5px;white-space:nowrap;display: inline-block;">
+								<strong style="color:white;">
+									Supported :
+								</strong>
+							</div>
+							<div style="background-color:#875A7B;color:white;padding:5px;margin-bottom:3px;text-align:center;border-radius:5px;white-space:nowrap;display: inline-block;">
+								<strong style="color:white;" title="The tool is compatible with the Odoo Enterprise version">
+									<i class="fa fa-check" style="margin-left:4px;"> </i>
+									Enterprise
+								</strong>
+							</div>
+							<div style="background-color:#875A7B;padding:5px;margin-top:3px;text-align:center;border-radius:5px;white-space:nowrap;display: inline-block;">
+								<strong style="color:white;" title="The tool is compatible with the Odoo Community version">
+									<i class="fa fa-check" style="margin-left:4px;"> </i>
+									Community
+								</strong>
+							</div>
+							<div style="background-color:#875A7B;color:white;padding:5px;margin-bottom:3px;text-align:center;border-radius:5px;white-space:nowrap;display: inline-block;">
+								<strong style="color:white;" title="The tool might be installed to Odoo.sh if you have a linked private git repository">
+									<i class="fa fa-check" style="margin-left:4px;"> </i>
+									Odoo.sh
+								</strong>
+							</div>
+						</strong>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
 <section class="oe_container lead bi_title_box">
 	<div >
 		<div >
 			<h2 class="oe_slogan bi_title" style="color:#5082c4;">
-				<b> CRM Task App in Odoo </b>
+				<b> Create Task from Lead Odoo Apps </b>
 			</h2>
 			<p class="oe_slogan">
 				This app helps to create new Task
@@ -47,8 +85,8 @@
 <section class="oe_container lead mt64">
 	<div >
 		<div class="oe_slogan oe_spaced text-center">
-			<a class="btn mt8 mr8" title="Request Demo" style="background-color: #2875aa;color: #FFFFFF !important;font-size: 20px;font-weight: bold;border-radius: 7px;" href="https://browseinfo.in/demo-request/" target="_blank"> Demo Request </a>
-			<a class="btn mt8 ml8" title="Video Tutorial" style="background-color: #2875aa;color: #FFFFFF !important;font-size: 20px;font-weight: bold;border-radius: 7px;" href="" target="_blank"> Video Tutorial</a>
+			<a class="btn mt8 mr8" title="Demo Request" style="background-color: #2875aa;color: #FFFFFF !important;font-size: 20px;font-weight: bold;border-radius: 7px;" href="mailto:sales@browseinfo.in?Subject=Demo Request for Create Task from Lead Odoo Apps" target="_top"> Demo Request </a>
+			<a class="btn mt8 ml8" title="Video Tutorial" style="background-color: #2875aa;color: #FFFFFF !important;font-size: 20px;font-weight: bold;border-radius: 7px;" href="https://youtu.be/UYOQ_orKtlg" target="_blank"> Video Tutorial</a>
 		</div>
 	</div>
 </section>
@@ -58,7 +96,7 @@
 		<div>
 			<p class="oe_slogan" style="color: #49a3fe;font-size: 35px;font-style: italic;font-weight:bolder;">Create Task from lead</p>
 			<p class="oe_slogan"> You can find create task button on the form of lead so if you want to create task form that lead you have to just click on that button. </p>
-			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="crm_task_1.png">
+			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="1_task.png">
 		</div>
 	</div>
 </section>
@@ -68,7 +106,7 @@
 		<div>
 			<p class="oe_slogan" style="color: #49a3fe;font-size: 35px;font-style: italic;font-weight:bolder;">Wizard to enter extra details for project task.</p>
 			<p class="oe_slogan">When you click on create task button, wizard will be open where you have to enter details of project of that task, deadline of the task and assigned person details.</p>
-			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="crm_task_2.png">
+			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="2_task.png">
 		</div>
 	</div>
 </section>
@@ -78,7 +116,7 @@
 		<div>
 			<p class="oe_slogan" style="color: #49a3fe;font-size: 35px;font-style: italic;font-weight:bolder;">On lead form you
 			can see Number of Tasks created from that lead</p>
-			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="crm_task_3.png">
+			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="3_task.png">
 		</div>
 	</div>
 </section>
@@ -88,7 +126,7 @@
 		<div>
 			<p class="oe_slogan" style="color: #49a3fe;font-size: 35px;font-style: italic;font-weight:bolder;">Here you can see
 			the detailed information of the task.</p>
-			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="crm_task_4.png">
+			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="4_task.png">
 		</div>
 	</div>
 </section>
@@ -103,32 +141,32 @@
 		</div>
 		<div class="row col-sm-12" style="margin-left: 1%;padding: 1% 8%;">
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/12.0/purchase_book_day_report/">
+				<a href="https://apps.odoo.com/apps/modules/14.0/purchase_book_day_report/">
 					<img class="img img-responsive" src="related/purchase_book_day_report.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/12.0/bi_top_growing_product/">
+				<a href="https://apps.odoo.com/apps/modules/14.0/bi_top_growing_product/">
 					<img class="img img-responsive" src="related/bi_top_growing_product.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/12.0/bi_sale_invoice_purchase_barcode/">
+				<a href="https://apps.odoo.com/apps/modules/14.0/bi_sale_invoice_purchase_barcode/">
 					<img class="img img-responsive" src="related/bi_sale_invoice_purchase_barcode.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/12.0/bi_sales_delivery/">
-					<img class="img img-responsive" src="related/delivery_dates.png" style="width: 100%;"/>
+				<a href="https://apps.odoo.com/apps/modules/14.0/bi_sales_delivery/">
+					<img class="img img-responsive" src="related/bi_sales_delivery.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/12.0/sale_price_history/">
+				<a href="https://apps.odoo.com/apps/modules/14.0/sale_price_history/">
 					<img class="img img-responsive" src="related/sale_price_history.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/12.0/product_cost_bom/">
+				<a href="https://apps.odoo.com/apps/modules/14.0/product_cost_bom/">
 					<img class="img img-responsive" src="related/product_cost_bom.png" style="width: 100%;"/>
 				</a>
 			</div>
@@ -145,32 +183,32 @@
 		</div>
 		<div class="row col-sm-12" style="margin-left: 1%;padding: 1% 8%;">
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/12.0/pos_orders_all/">
+				<a href="https://apps.odoo.com/apps/modules/14.0/pos_orders_all/">
 					<img class="img img-responsive" src="demanded/all_in_one_pos.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/12.0/bi_customer_overdue_statement/">
+				<a href="https://apps.odoo.com/apps/modules/14.0/bi_customer_overdue_statement/">
 					<img class="img img-responsive" src="demanded/customer_overdue.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/12.0/generic_excel_report/">
-					<img class="img img-responsive" src="demanded/generic_excel_report.png" style="width: 100%;"/>
+				<a href="https://apps.odoo.com/apps/modules/14.0/generic_excel_reports/">
+					<img class="img img-responsive" src="demanded/generic_excel_reports.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/12.0/sales_commission_generic/">
+				<a href="https://apps.odoo.com/apps/modules/14.0/sales_commission_generic/">
 					<img class="img img-responsive" src="demanded/sale_commision.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/12.0/bi_generic_import/">
+				<a href="https://apps.odoo.com/apps/modules/14.0/bi_generic_import/">
 					<img class="img img-responsive" src="demanded/bi_generic_import.png" style="width: 100%;"/>
 				</a>
 			</div>
 			<div class="col-sm-4" style="padding: 5px;padding-right: 10px;">
-				<a href="https://apps.odoo.com/apps/modules/12.0/branch/">
+				<a href="https://apps.odoo.com/apps/modules/14.0/branch/">
 					<img class="img img-responsive" src="demanded/branch.png" style="width: 100%;"/>
 				</a>
 			</div>
@@ -184,7 +222,7 @@
 			<h2 class="oe_slogan">Free Support</h2>
 			<h3 class="oe_slogan" style="font-size: 21px; color: #000000 !important;">You will get 90 Days free support incase any bugs or issue (Except data recovery).</h3>
 			<p class="oe_slogan" style="font-size: 18px; ">
-		At BrowseInfo we offer  end to end solution for Odoo services. Which includes analysis &amp; consultation on the workflows and integration part.  Please note that You're not allowed to distribute this module after purchase! Incase of any question regarding this module feel free to email us on <a href="mailto:sales@browseinfo.in">sales@browseinfo.in</a> or raise a ticket on support.
+		At BrowseInfo we offer  end to end solution for Odoo services. Which includes analysis &amp; consultation on the workflows and integration part.  Please note that You're not allowed to distribute this module after purchase! Incase of any question regarding this module feel free to email us on <a href="mailto:ticket@browseinfo.in">ticket@browseinfo.in</a> or raise a ticket on support.
 			</p>
 		</div>
 	</div>
@@ -200,9 +238,8 @@
 			</div>
 		</div>
 		<div class="oe_slogan oe_spaced text-center">
-			<a class="btn mt8" title="Website" style="background-color: #3497db;color: #FFFFFF !important;font-size: 20px;font-weight: bold;" href="https://browseinfo.in/" target="_blank"> Website </a>
-			<a class="btn mt8" title="Email on Support" style="background-color: #3497db;color: #FFFFFF !important;font-size: 20px;font-weight: bold;" href="https://browseinfo.in/request-support/" target="_blank"> Support Request </a>
-			<a class="btn mt8" title="Request New Features now !" style="background-color: #3497db;color: #FFFFFF !important;font-size: 20px;font-weight: bold;" href="https://browseinfo.in/our-services/" target="_blank">Services</a>
+			<a class="btn mt8" title="Query and Demo" style="background-color: #3497db;color: #FFFFFF !important;font-size: 20px;font-weight: bold;" href="mailto:sales@browseinfo.in?Subject=Demo Request for Create Task from Lead Odoo Apps" target="_blank"> Query and Demo </a>
+			<a class="btn mt8" title="Email on Support" style="background-color: #3497db;color: #FFFFFF !important;font-size: 20px;font-weight: bold;" href="mailto:ticket@browseinfo.in?Subject=Support Request for Create Task from Lead Odoo Apps" target="_blank"> Support Request </a>
 		</div>
 	</div>
 </section>
